# burmacodetelegrambot

./: .env.local  .gitignore  README.md  pyproject.toml  requirement.txt  requirements.txt  set_webhook.py
src/: config.py  main.py
src/bot/: application.py  bgremove.py  handlers.py  utils.py
src/database/: __init__.py  chat_history_db.py  db.py  user_db.py
tests/: load_test_bot.py  notify_user.py  test_bot.py
